# Chess-AI

./: CMakeLists.txt  README.md
engine/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Constants.cpp  Constants.h  Directions.cpp  Directions.h  Eval.cpp  Eval.h  Move.h  MoveGen.cpp  MoveGen.h  Run.H  Run.cpp  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  UCI.cpp  UCI.h
main/: main.cpp
test/: evaluation_test.cpp  move_generation_test.cpp
